--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "composite": true,
     "module": "ESNext",
     "target": "ES2020",
-    "lib": ["DOM"],
+    "lib": ["ES2021", "DOM"],
     "rootDir": "ts",
     "outDir": "public/js"
   },
