--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "zig build && tsc && npm run cpp-build",
-    "cpp-build": "zig build-lib --export=getControls --export=sizeOfControls --export=getScreen --export=sizeOfScreen --export=screenWidth --export=screenHeight --export=updateAndRender -dynamic -O ReleaseSafe -target wasm32-freestanding cpp/main.cpp -femit-bin=public/wasm/CWasm2.wasm"
+    "cpp-build": "zig build-lib --export=getControls --export=sizeOfControls --export=getScreen --export=sizeOfScreen --export=screenWidth --export=screenHeight --export=updateAndRender -dynamic -O ReleaseFast -target wasm32-freestanding cpp/main.cpp -femit-bin=public/wasm/CWasm2.wasm"
   },
   "repository": {
     "type": "git",
